make screenshot toggle visible in stylus (bug 852073)

--- a/media/css/mkt/filters.styl
+++ b/media/css/mkt/filters.styl
@@ -29,9 +29,6 @@
             text-align: left;
         }
     }
-    .expand-toggle {
-        display: none;
-    }
 
     .header-button.back {
         width: 20px;
